--- a/result/2021-12-28.md
+++ b/result/2021-12-28.md
@@ -39,3 +39,4 @@
 39. [狗狗的直觉能有多准](https://s.weibo.com//weibo?q=%23%E7%8B%97%E7%8B%97%E7%9A%84%E7%9B%B4%E8%A7%89%E8%83%BD%E6%9C%89%E5%A4%9A%E5%87%86%23&Refer=top) 123636
 40. [2021最想珍藏的照片](https://s.weibo.com//weibo?q=2021%E6%9C%80%E6%83%B3%E7%8F%8D%E8%97%8F%E7%9A%84%E7%85%A7%E7%89%87&Refer=top) 120905
 41. [炭火烤鸡蛋变炸蛋瞬间火光四溅](https://s.weibo.com//weibo?q=%23%E7%82%AD%E7%81%AB%E7%83%A4%E9%B8%A1%E8%9B%8B%E5%8F%98%E7%82%B8%E8%9B%8B%E7%9E%AC%E9%97%B4%E7%81%AB%E5%85%89%E5%9B%9B%E6%BA%85%23&Refer=top) 41216
+42. [西安医护人员一封封请战书令人泪目](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E5%8C%BB%E6%8A%A4%E4%BA%BA%E5%91%98%E4%B8%80%E5%B0%81%E5%B0%81%E8%AF%B7%E6%88%98%E4%B9%A6%E4%BB%A4%E4%BA%BA%E6%B3%AA%E7%9B%AE%23&Refer=top) 32257
